--- a/README.asciidoc
+++ b/README.asciidoc
@@ -38,9 +38,9 @@ image::/elek3.png[Board3]
 
 # Mechanics
 
-3d-printed battery and alarm holders for the robot for better fit and alarm stability. To add a little character to our robot, we added 3d-printed Kivipallur Jürto face to the camera holder. We also added some borders to sides and back to ensure that the ball will not get stuck outside or inside of the robot. We created 3d-printed borders to thrower, that guide the ball correctly. Moved most of the cables inside of the robot. 
-Our ball thrower has a fixed throwing angle of 60 degrees. Distance between thrower sides is 42 mm, The distance between motor and ball slider ramps is 35 mm and the distance from motor to the ground is 38 mm. The sliders have cutouts for support and stability, as they sit on the bottom plate.
-Photos of our robot.
+3d-printed battery and alarm holders for the robot for better fit and alarm stability. To add a little character to our robot, we added 3d-printed Kivipallur Jürto face to the camera holder. We also added some borders to sides and back to ensure that the ball will not get stuck outside or inside of the robot. We created 3d-printed borders to thrower, that guide the ball correctly. Moved most of the cables inside of the robot. +
+Our ball thrower has a fixed throwing angle of 60 degrees. Distance between thrower sides is 42 mm, The distance between motor and ball slider ramps is 35 mm and the distance from motor to the ground is 38 mm. The sliders have cutouts for support and stability, as they sit on the bottom plate. +
+Photos of our robot. +
 
 image::/meh1.png[robot1]
 
