--- a/firmware/README.asciidoc
+++ b/firmware/README.asciidoc
@@ -29,7 +29,7 @@ andmed = struct.pack('<hhhHBH', speed1, speed2, speed3, thrower_speed, disable_f
 ** int16_t speed2
 *** returns Mootor2 feedback
 ** int16_t speed3
-*** returns Trhower feedback
+*** returns Mootor3 feedback
 ** uint16_t delimiter
 *** delimiter value 0xAAAA
 
